[gd_scene load_steps=4 format=3 uid="uid://c2phaqnk4amq0"]

[ext_resource type="Script" uid="uid://oc68vey2r0x3" path="res://scripts/Card/Pack&Set/card_set.gd" id="1_7swmd"]
[ext_resource type="FontFile" uid="uid://dj85nkjpq655u" path="res://assets/fonts/cjkFonts-allseto-v1.11-2.ttf" id="2_dstw1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3wsh"]
size = Vector2(161, 230)

[node name="CardSet" type="Node2D"]
script = ExtResource("1_7swmd")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 16
visibility_layer = 16
shape = SubResource("RectangleShape2D_r3wsh")

[node name="Label" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(150, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -384.72
offset_right = 75.0
offset_bottom = -184.72
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dstw1")
theme_override_font_sizes/font_size = 20
text = "test"
horizontal_alignment = 1
vertical_alignment = 2
uppercase = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
